--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The package tscv provides a collection of functions and utilities for time series cross validation and tidy time series forecasting based on the tidyverts (tsibble, fable and fabletools).
+The package tscv provides a collection of functions and tools for time series analysis and forecasting as well as time series cross-validation. This is mainly a selection of functions that I find useful for research in the area of time series forecasting.
 
 ## Installation
 
@@ -30,8 +30,6 @@ devtools::install_github("ahaeusser/tscv")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
 ```{r packages, message=FALSE}
 # Load relevant packages
 library(tscv)
@@ -40,10 +38,11 @@ library(tsibble)
 library(fable)
 ```
 
-The dataset `elec_price` is a hourly "tsibble" with day-ahead electricity spot prices from the ENTSO-E Transparency Platform. The dataset contains time series data from 2019-01-01 00:00:00 to 2019-12-31 23:00:00 for five bidding zones within europe. We can use the function `clean_data` to prepare the dataset for further usage:
+The dataset `elec_price` is a hourly 'tsibble' with day-ahead electricity spot prices from the ENTSO-E Transparency Platform. The dataset contains time series data from 2019-01-01 00:00:00 to 2019-12-31 23:00:00 for five bidding zones in europe. We can use the function `clean_data` to prepare the dataset for further usage. The function checks whether the input data are a valid tsibble or not (regular spaced in time and ordered). Furthermore, implicit missing values are turned into explicit missing values (existing missing values are left untouched). If the data are provided in wide format, they are gathered into long format. For convenience, the index variable is renamed to `date_time`, the key variable is renamed to  `variable` and the measurement variable is renamed to `value`.
 
 ```{r clean data}
-data <- elec_price %>% 
+data <- elec_price %>%
+  filter(variable == "Day-ahead Price (DE)") %>%
   clean_data()
 
 data
@@ -51,9 +50,10 @@ data
 plot_ts(data)
 ```
 
-To prepare the dataset for time series cross-validation, we can use the function `split_data`:
+To prepare the dataset for time series cross-validation, we can use the function `split_data`. This function splits the data into training and testing (i.e. partitioning into time slices) for time series cross-validation. The user can choose between `stretch` and `slide`. The first is an expanding window approach, while the latter is a fixed window approach. The user can define the window sizes for training and testing via `n_init` and `n_ahead`, as well as the step size for increments via `n_step`.
 
 ```{r split data}
+
 mode <- "slide"
 n_init <- 2400
 n_step <- 24
@@ -64,10 +64,87 @@ data <- data %>%
     mode = mode,
     n_init = n_init,
     n_step = n_step,
-    n_ahead = n_ahead
-    )
+    n_ahead = n_ahead)
+
+# Fur illutrative purpose, we only use the first five time slices ...
+data <- data %>%
+  filter(slice %in% c(1:5))
 
 data
 ```
+
+
+
+```{r train}
+models <- data %>%
+  filter(sample == "train") %>%
+  model(
+    sNaive = SNAIVE(value),
+    ARIMA = ARIMA(value ~ fourier(period = c(24, 168), K = c(6, 6)) + PDQ(0,0,0)))
+
+fcsts <- models %>%
+  forecast_model(n_ahead = n_ahead)
+```
+
+
+
+```{r bind}
+data <- bind_data(
+  data = data,
+  fcsts = fcsts)
+
+data
+```
+
+
+
+```{r plot_forecast}
+variable <- c("Day-ahead Price (DE)")
+model <- c("sNaive", "ARIMA")
+slice <- c(1)
+
+plot_forecast(
+  data = data,
+  variable = variable,
+  model = model,
+  slice = slice,
+  title = "Day-ahead Price (DE)",
+  subtitle = "Forecast from 2019-04-11 00:00 to 2019-04-11 23:00",
+  caption = "Data: ENTSO-E Transparency Platform",
+  ylab = "[Euro/MWh]")
+```
+
+
+
+```{r errors}
+# Evaluation
+errors <- data %>%
+  create_errors()
+
+errors
+
+plot_error_dist(
+  data = errors,
+  variable = variable,
+  model = model)
+```
+
+
+
+```{r metrics}
+metrics <- errors %>%
+  error_metrics()
+
+metrics
+
+metric <- c("MAE", "MAPE")
+
+plot_error_metrics(
+  data = metrics,
+  variable = variable,
+  model = model,
+  metric = metric)
+```
+
 
 
