--- a/vignettes/cross_validation.Rmd
+++ b/vignettes/cross_validation.Rmd
@@ -48,7 +48,7 @@ The dataset `elec_price` is a hourly `tsibble` with day-ahead electricity spot p
 
 You can use the function `clean_data()` to prepare the dataset for further usage. The function checks whether the input data are a valid tsibble or not (regular spaced in time and ordered). Furthermore, implicit missing values are turned into explicit missing values (existing missing values are left untouched). If the data are provided in wide format, they are gathered into long format. You can use the function `plot_line()` to visualize the four time series.
 
-```{r clean data}
+```{r clean_data}
 # Prepare dataset
 data <- elec_price %>%
   mutate(Series = paste0(Series, " (", BZN, ")")) %>%
@@ -75,7 +75,7 @@ data %>%
 
 To prepare the dataset for time series cross-validation (TSCV), you can use the function `split_data()`. This function splits the data into training and testing (i.e. partitioning into time slices) for time series cross-validation. You can choose between `stretch` and `slide`. The first is an expanding window approach, while the latter is a fixed window approach. Furthermore, you can define the (initial) window size for training and testing via `n_init` and `n_ahead`, as well as the step size for increments via `n_skip`.
 
-```{r split data}
+```{r split_data}
 # Setup for time series cross validation
 n_init <- 2400   # size for training window
 n_ahead <- 24    # size for testing window (forecast horizon)
@@ -106,10 +106,10 @@ data %>% summarise_split()
 
 The data are splitted into training and testing slices and we are ready to forecast. Due to the sample size and computation time, only very simple benchmark methods are used. The functions `SMEDIAN` and `SMEAN` are extensions to the `fable` package. The function `SMEAN` is exactly the same as running a regression against seasonal dummy variables (`TSLM(value ~ season())`). I just added this function for convenience. Further forecasting methods are available (e.g. `TBATS()` and `DSHW()` from package `forecast` or `ELM()` and `MLP()` from package `nnfor`).
 
-```{r train}
+```{r train_models}
 # Model training
 data <- data %>%
-  filter(split %in% c(1:10))
+  filter(split %in% c(1:100))
 
 models <- data %>%
   filter(sample == "train") %>%
