Updated pkgdown site and fixed issues with figures

--- a/vignettes/cross_validation.Rmd
+++ b/vignettes/cross_validation.Rmd
@@ -13,8 +13,8 @@ vignette: >
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  dev = "svg",
-  fig.path = "figures/tscv-",
+  dev = "png",
+  # fig.path = "figures/tscv-",
   fig.height = 5,
   fig.width = 7
 )
